@@ -1,5 +1,5 @@
-#HSQL Database Engine 1.8.0.5
-#Fri Aug 29 10:24:33 IST 2008
+#HSQL Database Engine 1.8.0.10
+#Tue Aug 19 10:31:19 EDT 2014
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
