@@ -294,6 +294,9 @@ Bug Fixes
 
 * SOLR-6314: Multi-threaded facet counts differ when SolrCloud has >1 shard (Erick Erickson)
 
+* SOLR-6378: Fixed example/example-DIH/ issues with "tika" and "solr" configurations, and tidied up README.txt
+  (Daniel Shchyokin via ehatcher)
+
 Optimizations
 ---------------------
 
